# muld

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
include/: muld.h
include/muld/: error.h  muld.h
src/: chunk_info.h  connection_controller.cpp  connection_controller.h  download_engine.cpp  download_handler.cpp  download_handler.h  download_job.cpp  download_job.h  downloader.cpp  downloader.h  error.h  file_info.h  http_downloader.cpp  http_downloader.h  job_image.h  logger.h  muld_cli.cpp  muld_cli_async.cpp  muld_cli_polling.cpp  muld_download_manager.cpp  muld_download_manager.h  task.h  threadpool.h  url.cpp  url.h  writer.h
tests/: test_attach_callbacks_threadsafe.cpp  test_callbacks_progress.cpp  test_chunk_stability_pause_resume.cpp  test_connection_controller.cpp  test_pause_resume.cpp  test_terminate_load.cpp
